# app/Http/Controllers/Api/ProfileController.php
@@ -24,6 +24,12 @@ class ProfileController extends Controller
      */
     #[Get('/')]
     #[OA\Get(path: '/profiles/{username}', operationId: 'GetProfileByUsername', tags: ['Profile'])]
+    #[OA\Parameter(
+        name: 'username',
+        in: 'path',
+        required: true,
+        description: 'Username of the profile to get',
+    )]
     #[OA\Response(
         response: 200,
         description: 'Success',
@@ -43,6 +49,12 @@ class ProfileController extends Controller
      */
     #[Post('follow', middleware: 'auth')]
     #[OA\Post(path: '/profiles/{username}/follow', operationId: 'FollowUserByUsername', tags: ['Profile'], security: ['BearerToken'])]
+    #[OA\Parameter(
+        name: 'username',
+        in: 'path',
+        required: true,
+        description: 'Username of the profile you want to follow',
+    )]
     #[OA\Response(
         response: 200,
         description: 'Success',
@@ -64,6 +76,12 @@ class ProfileController extends Controller
      */
     #[Delete('follow', middleware: 'auth')]
     #[OA\Delete(path: '/profiles/{username}/follow', operationId: 'UnfollowUserByUsername', tags: ['Profile'], security: ['BearerToken'])]
+    #[OA\Parameter(
+        name: 'username',
+        in: 'path',
+        required: true,
+        description: 'Username of the profile you want to unfollow',
+    )]
     #[OA\Response(
         response: 200,
         description: 'Success',
