# app/Http/Resources/ProfileResource.php
@@ -5,10 +5,44 @@ namespace App\Http\Resources;
 use App\Models\User;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Support\Facades\Auth;
+use OpenApi\Attributes as OA;
 
 /**
  * @property User $resource
  */
+#[OA\Schema(
+    schema: "ProfileResponse",
+    type: "object",
+    properties: [
+        new OA\Property(
+            property: "profile",
+            ref: "#/components/schemas/Profile"
+        )
+    ]
+)]
+#[OA\Schema(
+    schema: "Profile",
+    type: "object",
+    properties: [
+        new OA\Property(
+            property: "username",
+            type: "string"
+        ),
+        new OA\Property(
+            property: "bio",
+            type: "string"
+        ),
+        new OA\Property(
+            property: "image",
+            type: "string"
+        ),
+        new OA\Property(
+            property: "following",
+            type: "boolean",
+            default: false
+        )
+    ]
+)]
 class ProfileResource extends JsonResource
 {
     public static $wrap = 'profile';
