# app/Http/Resources/SingleCommentResource.php
@@ -4,10 +4,49 @@ namespace App\Http\Resources;
 
 use App\Models\Comment;
 use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes as OA;
 
 /**
  * @property Comment $resource
  */
+#[OA\Schema(
+    schema: "SingleCommentResponse",
+    type: "object",
+    properties: [
+        new OA\Property(
+            property: "comment",
+            ref: "#/components/schemas/Comment"
+        )
+    ]
+)]
+#[OA\Schema(
+    schema: "Comment",
+    type: "object",
+    properties: [
+        new OA\Property(
+            property: "id",
+            type: "integer"
+        ),
+        new OA\Property(
+            property: "body",
+            type: "string"
+        ),
+        new OA\Property(
+            property: "createdAt",
+            type: "string",
+            format: "date-time"
+        ),
+        new OA\Property(
+            property: "updatedAt",
+            type: "string",
+            format: "date-time"
+        ),
+        new OA\Property(
+            property: "author",
+            ref: "#/components/schemas/Profile"
+        )
+    ]
+)]
 class SingleCommentResource extends JsonResource
 {
     public static $wrap = 'comment';
